Revision history for LWP-ConsoleLogger

{{$NEXT}}

0.000011  2014-08-15 23:58:21EDT-0400 America/Toronto
    - dzil tweaks to make CPANTS happier

0.000010  2014-07-25 23:33:35EDT-0400 America/Toronto
    - Fixes typos in documentation
    - Adds MetaCPAN::Client to the examples folder

0.000009  2014-07-17 10:14:29EDT-0400 America/Toronto
    - Don't prefix XML HashRef (in text) with a slash
    - Restore table descriptions which were wiped out in previous release

0.000008  2014-07-14 19:07:58EDT-0400 America/Toronto
    - Don't attempt to draw empty tables

0.000007  2014-07-14 17:51:25EDT-0400 America/Toronto
    - Configure Data::Printer layout options

0.000006  2014-07-14 11:54:12EDT-0400 America/Toronto
    - Make XML testing a bit more verbose

0.000005  2014-07-12 10:54:08EDT-0400 America/Toronto
    - Adds XML parsing

0.000004  2014-06-16 22:39:09EDT-0400 America/Toronto

    - Updates Pod for content and text pre_filters
    - Also dump GET params (if available) for POST requests

0.000003  2014-06-09 16:47:50EDT-0400 America/Toronto
    - Fixes call to wrong subref in text filtering (@sergeyromanov)
    - Changes copyright holder and license to MaxMind defaults

0.000002  2014-06-06 22:21:18EDT-0400 America/Toronto
    - Start using MooseX::Types

0.000001  2014-06-05 00:28:50EDT-0400 America/Toronto
    - Initial release.