@@ -2,7 +2,7 @@ NAME
     LWP::ConsoleLogger - LWP tracing and debugging
 
 VERSION
-    version 0.000011
+    version 0.000012
 
 SYNOPSIS
         my $ua = LWP::UserAgent->new( cookie_jar => {} );
