@@ -3,7 +3,7 @@ author  = Olaf Alders <olaf@wundercounter.com>
 license = Artistic_2_0
 copyright_holder = MaxMind, Inc.
 copyright_year   = 2014
-version = 0.000011
+version = 0.000012
 
 [GatherDir]
 exclude_filename = cpanfile
