@@ -2,6 +2,9 @@ Revision history for LWP-ConsoleLogger
 
 {{$NEXT}}
 
+    - Print JSON as Perl data structure when dumping text
+    - Adds more scripts to examples folder
+
 0.000011  2014-08-15 23:58:21EDT-0400 America/Toronto
     - dzil tweaks to make CPANTS happier
 
